--- a/manifest.json
+++ b/manifest.json
@@ -9,8 +9,7 @@
         "scripting"
     ],
     "host_permissions": [
-        "http://*/*",
-        "https://*/*"
+        "<all_urls>"
     ],
     "action": {
         "default_popup": "index.html",
@@ -20,6 +19,12 @@
         {
             "matches": ["<all_urls>"],
             "js": ["content.js"]
+        }
+    ],
+    "web_accessible_resources": [
+        {
+            "resources": ["libs/jspdf.umd.min.js"],
+            "matches": ["<all_urls>"]
         }
     ]
 }
