working with github

--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -1,12 +1,25 @@
 name: Accessibility_Tracker_CLI
 
-on: [push]
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    container:
-      image: node:lts
-    steps:
-      - uses: actions/checkout@v4
-      - run: node -e 'console.log("Running")'
+# Stages Planned
+# Install
+# Test
+# Report
+
+stages: 
+  - install
+  - test
+  - report
+
+
+run_test:
+  image: node:lts
+  
+  stage: test
+  
+  on: [push]
+
+  script: npm i
+
+
+
