--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -2,10 +2,10 @@ on:
   push:
 
 jobs:
-  install_and_test:
+  run_cypress_test:
     runs-on: ubuntu-latest
 
-    steps:
+    steps: 
       - name: Checkout code
         uses: actions/checkout@v3
 
@@ -13,4 +13,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 'lts/*'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run Cypress tests
+        run: npm test
 
